Fix styling on smaller devices

--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -2,12 +2,14 @@
 
 body {
     background-color: #7982ec3d;
+    padding: 0;
+    margin: 0;
 }
 
 h1 {
     font-family: 'Josefin Sans', sans-serif;
     color: #7982ED;
-    font-size: 4rem;
+    font-size: 3.7rem;
     font-weight: 700;
     text-align: center;
 }
